--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pin-field": "^3.1.2",
+    "react-pin-input": "^1.3.0",
+    "react-pin-input-hook": "^1.0.8",
     "typescript": "4.9.4"
   },
   "devDependencies": {
