--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "clsx": "^1.2.1",
+    "cookies-next": "^2.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
@@ -23,6 +24,7 @@
     "react-pin-field": "^3.1.2",
     "react-pin-input": "^1.3.0",
     "react-pin-input-hook": "^1.0.8",
+    "react-toastify": "^9.1.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
